# tempOS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  final.md
.cursor/rules/: beateros.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  contracts-conformance.yml  contracts.yml  final-integrity.yml  pr-governance.yml
benchmarks/: manifest.json
contracts/: README.md
contracts/schema/: accelerator-telemetry.schema.json  action-manifest.schema.json  agent-session.schema.json  capability-grant.schema.json  capability-receipt.schema.json  common.schema.json  journal.schema.json  memory-record.schema.json  payment-mandate.schema.json  performance-trace.schema.json  policy-decision.schema.json  scenario-manifest.schema.json  security-scenario.schema.json  trace-bundle.schema.json  worker-preflight-plan.schema.json
contracts/schemas/: common.schema.json  policy_decision.schema.json
crates/beater-os-audit/: Cargo.toml  README.md
crates/beater-os-core/: Cargo.toml
crates/beater-os-memory/: Cargo.toml
crates/beater-os-runtime/: Cargo.toml
crates/beater-os-runtime/examples/: hosted_runtime_bundle.rs  http_pending_local_shell_worker.rs  http_supervised_local_shell_worker_cycle.rs  local_shell_supervised_worker_cycle.rs  local_shell_supervisor_service.rs  local_shell_worker_loop.rs  local_shell_worker_once.rs  local_shell_worker_recovery.rs
crates/beater-os-runtime/src/: lib.rs
crates/beater-os-sandbox/: Cargo.toml
crates/beater-os-sandbox/src/: lib.rs
crates/beater-os-scenario/: Cargo.toml
crates/beater-os-scenario/src/: lib.rs
crates/beater-os-scenario/tests/: corpus.rs
crates/beater-os-session/: Cargo.toml
crates/beater-os-session/src/: error.rs  lib.rs
crates/beater-os-session/tests/: lifecycle.rs
crates/beater-os-tool-gateway/: Cargo.toml
crates/beater-os-tool-gateway/src/: lib.rs
crates/beater-os-tool-gateway/tests/: local_shell.rs
crates/beater-os-tool-registry/: Cargo.toml  README.md
crates/beater-os-tool-registry/src/: error.rs  lib.rs  registry.rs
crates/beater-os-tool-registry/tests/: registry.rs
crates/beater-osd/: Cargo.toml
crates/beater-osd-http/: Cargo.toml
crates/beater-osd/src/: error.rs  lib.rs
crates/beater-osd/tests/: admission.rs  single_writer.rs
crates/beaterosctl/: Cargo.toml
crates/beaterosctl/src/: args.rs  commands.rs  error.rs  lib.rs  main.rs  store.rs
crates/beaterosctl/tests/: flow.rs  runtime_trace.rs  sandbox_lane.rs
docs/: agent-coordination-log.md  architecture-runtime-to-metal-path.md  beaterosctl.md  coordination.md  glossary.md  implementation-backlog.md  multi-agent-coordination.md  open-questions.md  optimization-agent-playbook.md  ownership-registry.md  repo-map.md  reviewer-guide.md  sota-systems-engineering.md  source-matrix.md  threat-model.md
docs/audit/: e2e-audit.md
docs/design/: budget-enforcement-and-runaway-control.md  eval-statistical-method.md  journal-redaction.md  payment-mandate-admission.md  revocation-semantics.md  risk-class.md  success-metrics-and-gates.md
docs/engineering/: bare-metal-e2e-matrix.json  bare-metal-readiness-manifest.json  bare-metal-readiness.md  metal-os-blueprint.md  optimization-evidence-runbook.md
docs/governance/: README.md  coordination-ledger.md  review-checklist.md
examples/traces/: README.md  coding-workflow.trace.json  payment-workflow.trace.json  resilience-review-timeout.trace.json
fixtures/email/: urgent-wire.eml
fixtures/memory/: poisoned-rollout.json
fixtures/payment/: swapped-invoice.json
fixtures/tools/: lookalike-uploader.json
fixtures/web/: injection-page.html
scenarios/: README.md  browser.research-cite.json  coding.repo-edit-test.json  payment.bounded-purchase.json  regression.model-downgrade.json  resilience.human-review-timeout.json  security.compromised-document.json  security.malicious-mcp-tool.json  security.memory-poisoning.json  security.prompt-injection-web.json  validate_scenarios.py
scenarios/iot/: actuation-approval-required.scenario.json  actuation-no-grant-denied.scenario.json  command-replay-no-idempotency.scenario.json  sensor-read-safe.scenario.json  stale-sensor-window.scenario.json  untrusted-telemetry-firmware-deploy.scenario.json
scenarios/security/: email-wire-funds.scenario.json  malicious-tool-exfiltration.scenario.json  memory-poisoning-deploy.scenario.json  payment-address-swap.scenario.json  prompt-injection-web.scenario.json  subagent-authority-escalation.scenario.json
scripts/: check-bare-metal-readiness.py  check-contract-canonicality.py  check-final-integrity.py  check-governance.py  check-optimization-docs.py  check-pr-review-packet.py  collect-bare-metal-host-profile.py  final-integrity.lock.json  local-e2e.py  mvp-demo.sh  run-bare-metal-e2e-matrix.py  run-beater-os-runtime-smoke.py  run-beater-os-runtime-supervised-worker-smoke.py  run-beater-os-runtime-supervisor-service-smoke.py  run-beater-os-runtime-worker-loop-smoke.py  run-beater-os-runtime-worker-recovery-smoke.py  run-beater-os-runtime-worker-smoke.py  run-beater-osd-http-claims-smoke.py  run-beater-osd-http-execute-smoke.py  run-beater-osd-http-supervised-worker-smoke.py  run-beater-osd-runtime-smoke.py  run-optimization-benchmarks.py
spec/: COORDINATION.md  README.md
spec/conformance/: README.md  validate.py
spec/contracts/: action-manifest.schema.json  agent-session.schema.json  capability-grant.schema.json  capability-receipt.schema.json  common.schema.json  memory-record.schema.json  payment-mandate.schema.json  policy-decision.schema.json  scenario-manifest.schema.json
tests/: test_bare_metal_e2e_matrix.py  test_bare_metal_readiness.py  test_collect_bare_metal_host_profile.py  test_contracts.py  test_final_integrity.py  test_governance.py  test_local_e2e.py  test_optimization_docs.py  test_pr_review_packet.py
tools/: contracts_validate.py  final_integrity.py  pr_governance_check.py  test_pr_governance_check.py
tools/conformance/: README.md  admission.py  build_fixtures.py  canonical.py  journalcheck.py  schema.py  selftest.py  validate.py
(+58 files in other folders)
