[workspace]
members = [
    "crates/beater-os-core",
    "crates/beater-os-tool-registry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/jadenfix/beaterOS"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
