[package]
name = "beater-os-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed agent runtime loop over the beaterOS daemon store."

[dependencies]
beater-os-core = { path = "../beater-os-core" }
beater-os-sandbox = { path = "../beater-os-sandbox" }
beater-os-tool-gateway = { path = "../beater-os-tool-gateway" }
beater-osd = { path = "../beater-osd" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
