[package]
name = "beater-os-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Scoped local execution lane for the beaterOS agent kernel: canonicalized filesystem confinement, scrubbed environment, bounded execution, and filesystem-diff receipts."

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
