[package]
name = "beater-os-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beater-os-core = { path = "../beater-os-core" }
chrono.workspace = true
thiserror.workspace = true

[lints]
workspace = true
