[package]
name = "beater-osd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable single-writer runtime store for the beaterOS local daemon."

[dependencies]
beater-os-core = { path = "../beater-os-core" }
beater-os-tool-registry = { path = "../beater-os-tool-registry" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true

[lints]
workspace = true
