[package]
name = "beaterosctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI and durable local journal store for the beaterOS agent kernel."

[[bin]]
name = "beaterosctl"
path = "src/main.rs"

[lib]
name = "beaterosctl"
path = "src/lib.rs"

[dependencies]
beater-os-core = { path = "../beater-os-core" }
beater-os-sandbox = { path = "../beater-os-sandbox" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
